title width fix wrap

--- a/src/main/resources/mediaservice/src/static/styles/main.css
+++ b/src/main/resources/mediaservice/src/static/styles/main.css
@@ -42,7 +42,7 @@ a{
 }
 
 header, .name-max-width  {
-    max-width: 90vw;
+    overflow-wrap: break-word;
 }
 
 
